// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with expenses 1`] = `
<DocumentFragment>
  <div>
    <h1>
      Expense List
    </h1>
    <div>
      <a
        href="/edit/undefined"
      >
        <h3>
          Gum
        </h3>
      </a>
      <p>
        195-December 31st, 1969
      </p>
    </div>
    <div>
      <a
        href="/edit/undefined"
      >
        <h3>
          Rent
        </h3>
      </a>
      <p>
        109500-Invalid date
      </p>
    </div>
    <div>
      <a
        href="/edit/undefined"
      >
        <h3>
          Credit Card
        </h3>
      </a>
      <p>
        4500-Invalid date
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render ExpenseList without expenses 1`] = `
<DocumentFragment>
  <div>
    <h1>
      Expense List
    </h1>
  </div>
</DocumentFragment>
`;
